--- a/src/main/webapp/customer/dashboard.xhtml
+++ b/src/main/webapp/customer/dashboard.xhtml
@@ -51,11 +51,11 @@
 			<div class="ui-g-12 ui-md-6 ui-lg-3">
 				<div class="ui-g card overview-box overview-box-1">
 					<div class="ui-g-4 overview-box-icon">
-						<i class="fa fa-inbox"></i>
+						<i class="fa fa-hdd-o"></i>
 					</div>
 					<div class="ui-g-8">
-						<span class="overview-box-count">100</span>
-						<span class="overview-box-name">Text1</span>
+						<span class="overview-box-count">#{dashboardUserBean.deviceCount}</span>
+						<span class="overview-box-name">Cihaz</span>
 					</div>
 					<div class="ui-g-12 overview-box-footer"></div>
 				</div>
