--- a/src/main/webapp/admin/dashboard.xhtml
+++ b/src/main/webapp/admin/dashboard.xhtml
@@ -64,11 +64,11 @@
 			<div class="ui-g-12 ui-md-6 ui-lg-3">
 				<div class="ui-g card overview-box overview-box-2">
 					<div class="ui-g-4 overview-box-icon">
-						<i class="fa fa-users"></i>
+						<i class="fa fa-hdd-o"></i>
 					</div>
 					<div class="ui-g-8">
-						<span class="overview-box-count">100</span> <span
-							class="overview-box-name">Text2</span>
+						<span class="overview-box-count">#{dashboardAdminBean.deviceCount}</span> <span
+							class="overview-box-name">Cihaz</span>
 					</div>
 					<div class="ui-g-12 overview-box-footer"></div>
 				</div>
