Müşteri Arıza/Bakım CRUD işlemleri yapıldı

--- a/src/main/webapp/admin/dashboard.xhtml
+++ b/src/main/webapp/admin/dashboard.xhtml
@@ -76,11 +76,11 @@
 			<div class="ui-g-12 ui-md-6 ui-lg-3">
 				<div class="ui-g card overview-box overview-box-3">
 					<div class="ui-g-4 overview-box-icon">
-						<i class="fa fa-cloud"></i>
+						<i class="fa fa-cog"></i>
 					</div>
 					<div class="ui-g-8">
-						<span class="overview-box-count">100</span> <span
-							class="overview-box-name">Text3</span>
+						<span class="overview-box-count">#{dashboardAdminBean.issueCount}</span> <span
+							class="overview-box-name">Bakım / Onarım</span>
 					</div>
 					<div class="ui-g-12 overview-box-footer"></div>
 				</div>
