--- a/src/main/webapp/customer/dashboard.xhtml
+++ b/src/main/webapp/customer/dashboard.xhtml
@@ -48,7 +48,7 @@
 
 	<ui:define name="content">
 		<div class="ui-g dashboard">
-			<div class="ui-g-12 ui-md-6 ui-lg-3">
+			<div class="ui-g-12 ui-md-6 ui-lg-4">
 				<div class="ui-g card overview-box overview-box-1">
 					<div class="ui-g-4 overview-box-icon">
 						<i class="fa fa-hdd-o"></i>
@@ -60,42 +60,31 @@
 					<div class="ui-g-12 overview-box-footer"></div>
 				</div>
 			</div>
-			<div class="ui-g-12 ui-md-6 ui-lg-3">
+			<div class="ui-g-12 ui-md-6 ui-lg-4">
 				<div class="ui-g card overview-box overview-box-2">
 					<div class="ui-g-4 overview-box-icon">
-						<i class="fa fa-users"></i>
+						<i class="fa fa-cog"></i>
 					</div>
 					<div class="ui-g-8">
-						<span class="overview-box-count">100</span>
-						<span class="overview-box-name">Text2</span>
+						<span class="overview-box-count">#{dashboardUserBean.maintenanceCount}</span>
+						<span class="overview-box-name">Bakım</span>
 					</div>
 					<div class="ui-g-12 overview-box-footer"></div>
 				</div>
 			</div>
-			<div class="ui-g-12 ui-md-6 ui-lg-3">
+			<div class="ui-g-12 ui-md-6 ui-lg-4">
 				<div class="ui-g card overview-box overview-box-3">
 					<div class="ui-g-4 overview-box-icon">
-						<i class="fa fa-cloud"></i>
+						<i class="fa fa-cogs"></i>
 					</div>
 					<div class="ui-g-8">
-						<span class="overview-box-count">100</span>
-						<span class="overview-box-name">Text3</span>
+						<span class="overview-box-count">#{dashboardUserBean.repairCount}</span>
+						<span class="overview-box-name">Onarım</span>
 					</div>
 					<div class="ui-g-12 overview-box-footer"></div>
 				</div>
 			</div>
-			<div class="ui-g-12 ui-md-6 ui-lg-3">
-				<div class="ui-g card overview-box overview-box-4">
-					<div class="ui-g-4 overview-box-icon">
-						<i class="fa fa-key"></i>
-					</div>
-					<div class="ui-g-8">
-						<span class="overview-box-count">100</span> <span
-							class="overview-box-name">Text3</span>
-					</div>
-					<div class="ui-g-12 overview-box-footer"></div>
-				</div>
-			</div>
+			
 
 		</div>
 	</ui:define>
